Fix review spacing on listing show page

--- a/app/assets/stylesheets/components/_review_index.scss
+++ b/app/assets/stylesheets/components/_review_index.scss
@@ -20,6 +20,8 @@
 .review-item {  
   width: 50%;
   margin-bottom: 40px;
+  box-sizing: border-box;
+  padding-right: 20px;
 }
 
 
